<resources>
    <string name="app_name">FreakNeT</string>
    <string name="login_etUsername">Username</string>
    <string name="login_etPassword">Password</string>
    <string name="login">Log In</string>
    <string name="freaknet">FreakNet</string>
    <string name="not_register_yet">Not Registered Yet?</string>
    <string name="login_etpasswordver">login_etPasswordVer</string>
    <string name="nickname">Nickname</string>
    <string name="type_password_again">Type password again</string>
    <string name="btnregisteralready">btnRegisterAlready</string>
    <string name="register">register</string>
    <string name="already_has_a_user">Already have a user</string>
    <string name="retype_password">Retype Password</string>
    <string name="write_new_message">Write a New Message</string>
    <string name="sendmessage">sendMessage</string>
    <string name="send">SEND</string>
    <string name="BaseUrl">http://localhost:5103/api/</string>
    <string name="BaseUrlApi">http://10.0.2.2:5103/api/</string>
    <string name="UserUrlApi">http://10.0.2.2:5103/api/users</string>

    <string name="BaseContactApiUrl">http://10.0.2.2:5103/api/contacts</string>

</resources>