<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".Registration">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/reg_Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:backgroundTint="#EDE5E5"
            android:ems="10"
            android:hint="@string/login_etUsername"
            android:inputType="textPersonName"
            android:textColorHint="#000000" />


        <EditText
            android:id="@+id/reg_Nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="#F3F1F1"
            android:ems="10"
            android:hint="@string/nickname"
            android:inputType="textPersonName"
            android:textColorHint="#000000" />


        <EditText
            android:id="@+id/reg_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="#FAFAFA"
            android:ems="10"
            android:hint="@string/login_etPassword"
            android:inputType="textPassword"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/reg_Password_ver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/retype_password"
            android:inputType="textPassword"
            android:textColorHint="#000000" />


<!--        <ImageButton-->
<!--            android:id="@+id/imageButton"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            app:srcCompat="@android:drawable/ic_menu_gallery" />-->

        <Button
            android:id="@+id/btn_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/register" />

        <Button
            android:id="@+id/btnRegisterAlready"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/already_has_a_user" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="53dp"
            android:layout_height="match_parent"
            android:scrollbarSize="30dp"
            app:srcCompat="@drawable/ic_chat" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/freaknet"
            android:textColor="#FFFFFF"
            android:textSize="35dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>